Updates for Cancun fork (#10)
- Bumps Geth to v1.14
- Adds support for pebbledb

Reviewed-on: https://git.vdb.to/cerc-io/ipld-eth-state-snapshot/pulls/10

--- a/environments/example.toml
+++ b/environments/example.toml
@@ -5,7 +5,7 @@
     user     = "vdbm"
     password = "password"
 
-[leveldb]
+[ethdb]
     path = "/Users/user/go/src/github.com/cerc-io/ipld-eth-state-snapshot/fixture/chain2data"
     ancient = "/Users/user/go/src/github.com/cerc-io/ipld-eth-state-snapshot/fixture/chain2data/ancient"
 
